@@ -1,4 +1,4 @@
-#  File src/library/tools/R/Rd2tex.R
+#  File src/library/tools/R/Rd2latex.R
 #  Part of the R package, http://www.R-project.org
 #
 #  This program is free software; you can redistribute it and/or modify
